--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Seao UX Portfolio</title>
+        <title>M. Seao UX Portfolio</title>
     </head>        
 
     <body>
