updated about page's title
If applied, this commit will update the about title

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>About Matthew Seao</title>
+        <title>About Matthew D. Seao</title>
     </head>        
 
     <body>
