updated index page's expert link
If applied, this commit will update the expert project link

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
                 <div>
                     <picture>
                         <source srcset="img/expert_app_preview.png" media="(max-width:767px)">
-                        <img src="img/expert_app_preview.png" alt="My Image">
+                        <img src="img/expert_app_preview.png" alt="Expert Preview">
                     </picture>
                 </div>
                 <div>
                 <h3>Expert App</h3>
                 <p>Connecting people with professionals in a social platform dedicated to providing a wide range
                 of communication options.</p>
-                <a href="">Read more!</a>
+                <a href="expert.html">Read more!</a>
                 </div>
             </div>
             <div>
