updated expert page br tag
If applied, this commit will fix br tags and add a closed main tag

--- a/expert.html
+++ b/expert.html
@@ -158,7 +158,7 @@
                 <picture>
                     <source srcset="img/expert/low_fidelity_6_1.png" media="(max-width:767px)">
                     <img src="img/expert/low_fidelity_6_1.png" alt="Wireframe 6">
-                </picture></br>
+                </picture><br>
                 <picture>
                     <source srcset="img/expert/mid_fidelity_1_1.png" media="(max-width:767px)">
                     <img src="img/expert/mid_fidelity_1_1.png" alt="Wireframe 1">
@@ -206,7 +206,7 @@
                     <picture>
                         <source srcset="img/expert/usability_testing_2_1.png" media="(max-width:767px)">
                         <img src="img/expert/usability_testing_2_1.png" alt="Usability Testing Rainbow Map">
-                    </picture></br>
+                    </picture><br>
                     <picture>
                         <source srcset="img/expert/mid_fidelity_1_1.png" media="(max-width:767px)">
                         <img src="img/expert/mid_fidelity_1_1.png" alt="Home Screen Before">
@@ -215,8 +215,8 @@
                         <source srcset="img/expert/usability_testing_3_1.png" media="(max-width:767px)">
                         <img src="img/expert/usability_testing_3_1.png" alt="Home Screen After">
                     </picture>
-                    <p>Issue: Participants were confused by the main functionality of submitting a question</br>
-                    Suggested Change: Make alterations to the titles for forms and selections.</br>
+                    <p>Issue: Participants were confused by the main functionality of submitting a question<br>
+                    Suggested Change: Make alterations to the titles for forms and selections.<br>
                     Evidence: Much like the previous issue, participants who were stuck at this step asked
                         questions about what each function would do rather than initially understanding.</p>
                         <picture>
@@ -228,8 +228,8 @@
                             <img src="img/expert/usability_testing_4_1.png" alt="Ask Question After">
                         </picture>
                         <p>Issue: Participants had issues understanding the functionality of the Delivery Preference
-                            screen.</br>
-                            Suggested Change: Make alterations to the titles for forms and selections.</br>
+                            screen.<br>
+                            Suggested Change: Make alterations to the titles for forms and selections.<br>
                             Evidence: The participants who lingered longer on the screen before taking action asked
                             questions about the purpose of each option. It seems necessary to take another look upon
                             improving for a better understanding.</p>
@@ -248,8 +248,8 @@
             <picture>
                 <source srcset="img/expert/final_mockups_1.png" media="(max-width:767px)">
                 <img src="img/expert/final_mockups_1.png" alt="Final Mock Ups">
-            </picture></br>
-            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FLXLKxHwvRrK7OlvS77JiXU%2FExpert%3Fnode-id%3D315%253A1380%26scaling%3Dscale-down%26page-id%3D8%253A315%26starting-point-node-id%3D315%253A1380" allowfullscreen></iframe> </br>
+            </picture><br>
+            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FLXLKxHwvRrK7OlvS77JiXU%2FExpert%3Fnode-id%3D315%253A1380%26scaling%3Dscale-down%26page-id%3D8%253A315%26starting-point-node-id%3D315%253A1380" allowfullscreen></iframe> <br>
             <p>Developing the Expert app was quite the journey for me. I wanted to make sure I had a full
                 connection with my potential users in every step of the way with researching, testing, and
                 surveys to ensure that the application was user centric based and I believed I achieved that
@@ -263,6 +263,7 @@
                         not been finalized through testing. The forum feature has not been implemented yet and it
                         would need user flows, functionality testing, and more.</p>
         </div>
+        </main>
     <footer id="contact">
         <div>
             <h2>Contact Me</h2>
