updated about page with css tags
If applied, this commit will add css tags

--- a/about.html
+++ b/about.html
@@ -4,6 +4,12 @@
     <head>
         <meta charset="utf-8">
         <title>About Matthew D. Seao</title>
+        <link rel="stylesheet" type="text/css" href="css/normalize.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;700&display=swap" rel="stylesheet"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>        
 
     <body>
@@ -20,8 +26,8 @@
         </div>
         </header>
         <main>
-            <div>
-                <div>
+            <div id="about-title">
+                <div class="container">
                     <h1>About Me</h1>
                 </div>
             </div>
@@ -31,7 +37,8 @@
                     <img src="img/profilepicture_placeholder.jpg" alt="Profile Picture">
                 </picture>
             </div>
-            <div>
+            <div id="about">
+                <div class="container">
                 <h2>My Story</h2>
                 <p>My name is Matthew and I am a UX Designer based in Columbus, OH. I have a huge
                 admiration for design and upon learning what UX Design is, I knew it would be a perfect fit for
@@ -67,7 +74,7 @@
             <h2>Contact Me</h2>
             <p>Interested in my work and looking for a designer? Feel free to get in touch!</p>
             <div>
-                <a href="mailto:mattseao@outlook.com">Email me</a>
+                <a href="mailto:mattseao@outlook.com" class="button contact">Email me</a>
             </div>
         </div>
         <div>        
