updated expert page with css tags
If applied, this commit will add css tags

--- a/expert.html
+++ b/expert.html
@@ -4,6 +4,12 @@
     <head>
         <meta charset="utf-8">
         <title>Expert App</title>
+        <link rel="stylesheet" type="text/css" href="css/normalize.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;700&display=swap" rel="stylesheet"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>        
 
     <body>
@@ -20,14 +26,17 @@
         </div>
         </header>
         <main>
-        <div>
+        <div id="project-title">
+            <div class="container">
             <picture>
                 <source srcset="img/expert/intro_1.png" media="(max-width:767px)">
                 <img src="img/expert/intro_1.png" alt="Expert App">
             </picture>
             <h1>Expert App</h1>
+            </div>
         </div>
-        <div>
+        <div id="project-background">
+            <div id="container"
             <h2>Introduction</h2>
             <p>The Expert app is a social platform allowing people to find their answers through professionals
                 of various fields.</p>
@@ -41,8 +50,10 @@
             <h2>Goals</h2>
             <p>Create a format that allows users to have full control of how communication is handled within
                 the features of the application.</p>
+            </div>
         </div>
-        <div>
+        <div id="project-process">
+            <div class="container">
             <h2>User Research Analysis</h2>
             <picture>
                 <source srcset="img/expert/user_research_analysis_1_1.png" media="(max-width:767px)">
@@ -262,6 +273,7 @@
                         version of the application and make additional changes. The UI design in the final mock up has
                         not been finalized through testing. The forum feature has not been implemented yet and it
                         would need user flows, functionality testing, and more.</p>
+                    </div>
         </div>
         </main>
     <footer id="contact">
@@ -269,7 +281,7 @@
             <h2>Contact Me</h2>
             <p>Interested in my work and looking for a designer? Feel free to get in touch!</p>
             <div>
-                <a href="mailto:mattseao@outlook.com">Email me</a>
+                <a href="mailto:mattseao@outlook.com" class="button contact">Email me</a>
             </div>
         </div>
         <div>        
