updated expert page with css tags
If applied, this commit will add css tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <head>
         <meta charset="utf-8">
         <title>M. Seao UX Portfolio</title>
+        <link rel="stylesheet" type="text/css" href="css/normalize.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;700&display=swap" rel="stylesheet"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>        
 
     <body>
@@ -20,12 +26,14 @@
         </div>
         </header>
         <main>
-        <div>
+        <div id="hero">
+            <div class="container">
             <h1>Hi, my name is Matthew Seao</h1>
                 <p>I’m a UX designer based in Columbus, OH.</p>
+            </div>
         </div>
-            <div>
-                <div>
+            <div id="work">
+                <div class="container">
             <h2>My Work</h2>
                 </div>
             </div>
@@ -40,7 +48,7 @@
                 <h3>Expert App</h3>
                 <p>Connecting people with professionals in a social platform dedicated to providing a wide range
                 of communication options.</p>
-                <a href="expert.html">Read more!</a>
+                <a href="expert.html" class="button">Read more!</a>
                 </div>
             </div>
             <div>
@@ -53,7 +61,7 @@
                 <div>
                 <h3>Second Project Placeholder</h3>
                 <p>Placeholder for second project</p>
-                <a href="">Read more!</a>
+                <a href="#" class="button">Read more!</a>
                 </div>
             </div>
             </main>
@@ -62,7 +70,7 @@
             <h2>Contact Me</h2>
             <p>Interested in my work and looking for a designer? Feel free to get in touch!</p>
             <div>
-                <a href="mailto:mattseao@outlook.com">Email me</a>
+                <a href="mailto:mattseao@outlook.com" class="button contact">Email me</a>
             </div>
         </div>
         <div>        
