--- a/expert.html
+++ b/expert.html
@@ -15,7 +15,7 @@
     <body>
         <header>
         <div>
-        <img src="https://via.placeholder.com/150x50?text=Logo" alt="Your Name" >
+        <img class="logo" src="https://via.placeholder.com/150x50?text=Logo" alt="Your Name" >
         <nav>
             <ul>
             <li><a href="index.html">Work</a></li>
@@ -36,20 +36,20 @@
             </div>
         </div>
         <div id="project-background">
-            <div id="container"
-            <h2>Introduction</h2>
-            <p>The Expert app is a social platform allowing people to find their answers through professionals
-                of various fields.</p>
-        </div>
-        <div>
-            <h2>Problem Statement</h2>
-            <p>In the current age of technology people have their own preferred way of communication. Expert
-                users need a way to easily communicate their questions in a centralized format.</p>
-        </div>
-        <div>
-            <h2>Goals</h2>
-            <p>Create a format that allows users to have full control of how communication is handled within
-                the features of the application.</p>
+            <div class="container">
+                <h2>Introduction</h2>
+                <p>The Expert app is a social platform allowing people to find their answers through professionals
+                    of various fields.</p>
+                    <div>
+                    <h2>Problem Statement</h2>
+                    <p>In the current age of technology people have their own preferred way of communication. Expert
+                        users need a way to easily communicate their questions in a centralized format.</p>
+                    </div>
+                    <div>
+                    <h2>Goals</h2>
+                    <p>Create a format that allows users to have full control of how communication is handled within
+                        the features of the application.</p>
+                    </div>
             </div>
         </div>
         <div id="project-process">
@@ -62,7 +62,7 @@
             <p>Before beginning the design process I needed to meet with potential users to learn about their
                 habits and emotions regarding applications that were in the same field as or adjacent to my
                 project.</p>
-        </div>
+
         <div>
             <p>With this information I’ll be able to synthesize the information into developing the user
                 personas for this project.</p>
@@ -275,6 +275,7 @@
                         would need user flows, functionality testing, and more.</p>
                     </div>
         </div>
+    </div>
         </main>
     <footer id="contact">
         <div>
