updated about page with css layout
If applied, this commit will add css tags to improve layout

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <body>
         <header>
         <div>
-        <img src="https://via.placeholder.com/150x50?text=Logo" alt="Your Name" >
+        <img class="logo" src="https://via.placeholder.com/150x50?text=Logo" alt="Your Name" >
         <nav>
             <ul>
             <li><a href="index.html">Work</a></li>
@@ -44,7 +44,6 @@
                 admiration for design and upon learning what UX Design is, I knew it would be a perfect fit for
                 me.</p>
                 <a href="files/resume.pdf" target="_blank">Download My Resume</a>
-            </div>
             <div>
                 <h2>Skills & Tools</h2>
                     <div>
@@ -68,6 +67,8 @@
                             </ul>
                     </div>
             </div>
+            </div>
+        </div>
         </main>
     <footer id="contact">
         <div>
