--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <header>
         <div>
-        <img src="https://via.placeholder.com/150x50?text=Logo" alt="Your Name" >
+        <img class="logo" src="https://via.placeholder.com/150x50?text=Logo" alt="Your Name" >
         <nav>
             <ul>
             <li><a href="index.html">Work</a></li>
@@ -35,9 +35,7 @@
             <div id="work">
                 <div class="container">
             <h2>My Work</h2>
-                </div>
-            </div>
-            <div>
+            <div class="row">
                 <div>
                     <picture>
                         <source srcset="img/expert_app_preview.png" media="(max-width:767px)">
@@ -51,7 +49,7 @@
                 <a href="expert.html" class="button">Read more!</a>
                 </div>
             </div>
-            <div>
+            <div class="row">
                 <div>
                     <picture>
                         <source srcset="img/second_project_preview.png" media="(max-width:767px)">
@@ -64,9 +62,11 @@
                 <a href="#" class="button">Read more!</a>
                 </div>
             </div>
+        </div>
+    </div>
             </main>
     <footer id="contact">
-        <div>
+        <div class="container">
             <h2>Contact Me</h2>
             <p>Interested in my work and looking for a designer? Feel free to get in touch!</p>
             <div>
