--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <body>
         <header>
         <div>
-        <img class="logo" src="https://via.placeholder.com/150x50?text=Logo" alt="Your Name" >
+        <img class="logo" src="https://via.placeholder.com/150x50?text=Logo" alt="Matt" >
         <nav>
             <ul>
             <li><a href="index.html">Work</a></li>
@@ -47,6 +47,7 @@
             <div>
                 <h2>Skills & Tools</h2>
                     <div class="row">
+                        <div class="col-md-6">
                         <h3>Relevant Skills</h3>
                             <ul>
                                 <li>User Research</li>
@@ -58,23 +59,25 @@
                                 <li>Usability Testing</li>
                                 <li>Frontend Development</li>
                             </ul>
-                    </div>
-                    <div>
+                        </div>
+                        <div class="col-md-6">
                         <h3>Tools I Use</h3>
                             <ul>
                                 <li>Figma</li>
                                 <li>Adobe Photoshop</li>
+                                <li>Visual Studio Code</li>
                             </ul>
+                        </div>
                     </div>
+                </div>
             </div>
             </div>
-        </div>
         </main>
     <footer id="contact">
         <div>
             <h2>Contact Me</h2>
             <p>Interested in my work and looking for a designer? Feel free to get in touch!</p>
-            <div>
+            <div class="row">
                 <a href="mailto:mattseao@outlook.com" class="button contact">Email me</a>
             </div>
         </div>
