--- a/about.html
+++ b/about.html
@@ -90,5 +90,6 @@
         <p>Copyright MATTHEW SEAO 2023</p>
         </div>
     </footer>
+    <script src="js/scripts.js"></script>
     </body>
 </html>
