--- a/expert.html
+++ b/expert.html
@@ -294,5 +294,6 @@
         <p>Copyright MATTHEW SEAO 2023</p>
         </div>
     </footer>
+    <script src="js/scripts.js"></script>
     </body>
 </html>
