--- a/index.html
+++ b/index.html
@@ -691,5 +691,6 @@
         <p>Copyright MATTHEW SEAO 2023</p>
         </div>
     </footer>
+    <script src="js/scripts.js"></script>
     </body>
 </html>
