update index page with navigation tags
If applied, this commit will add navigation tags

--- a/index.html
+++ b/index.html
@@ -10,19 +10,23 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;700&display=swap" rel="stylesheet"> 
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script src="https://kit.fontawesome.com/8220e551aa.js" crossorigin="anonymous"></script>
     </head>        
 
     <body>
         <header>
-        <div>
-        <img class="logo" src="https://via.placeholder.com/150x50?text=Logo" alt="Your Name" >
+        <div class="container">
+            <div class="navtoggle" id="myNavtoggle">
+        <img class="logo" src="https://via.placeholder.com/150x50?text=Logo" alt="Matt Seao" />
         <nav>
             <ul>
             <li><a href="index.html">Work</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
+            <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fa-solid fa-bars"></i></a></li>
             </ul>
           </nav>
+          </div>
         </div>
         </header>
         <main>
@@ -691,6 +695,10 @@
         <p>Copyright MATTHEW SEAO 2023</p>
         </div>
     </footer>
+    <script
+			  src="https://code.jquery.com/jquery-3.6.4.min.js"
+			  integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8="
+			  crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
     </body>
 </html>
