--- a/about.html
+++ b/about.html
@@ -1,33 +1,29 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
-<head>
-    <meta charset="utf-8">
-    <title>M. Seao UX Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;700&display=swap" rel="stylesheet"> 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://kit.fontawesome.com/8220e551aa.js" crossorigin="anonymous"></script>
-</head>        
+    <head>
+        <meta charset="utf-8">
+        <title>About Matthew D. Seao</title>
+        <link rel="stylesheet" type="text/css" href="css/normalize.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;700&display=swap" rel="stylesheet"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    </head>        
 
-<body>
-    <header>
-    <div class="container">
-        <div class="navtoggle" id="myNavtoggle">
-    <img class="logo" src="https://via.placeholder.com/150x50?text=Logo" alt="Matt Seao" />
-    <nav>
-        <ul>
-        <li><a href="index.html">Work</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
-        <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fa-solid fa-bars"></i></a></li>
-        </ul>
-      </nav>
-      </div>
-    </div>
+    <body>
+        <header>
+        <div>
+        <img class="logo" src="https://via.placeholder.com/150x50?text=Logo" alt="Matt" >
+        <nav>
+            <ul>
+            <li><a href="index.html">Work</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
         </header>
         <main>
             <div id="about-title">
@@ -94,10 +90,6 @@
         <p>Copyright MATTHEW SEAO 2023</p>
         </div>
     </footer>
-    <script
-			  src="https://code.jquery.com/jquery-3.6.4.min.js"
-			  integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8="
-			  crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
     </body>
 </html>
