--- a/expert.html
+++ b/expert.html
@@ -281,7 +281,7 @@
         <div>
             <h2>Contact Me</h2>
             <p>Interested in my work and looking for a designer? Feel free to get in touch!</p>
-            <div class="row">
+            <div>
                 <a href="mailto:mattseao@outlook.com" class="button contact">Email me</a>
             </div>
         </div>
