update about.html with removing unnecessary trails
If applied, this commit will remove unnecessary trails

--- a/about.html
+++ b/about.html
@@ -20,8 +20,8 @@
             <source
               srcset="img/logo.png"
               media="(max-width:767px)"
-            />
-            <img src="img/logo.png" alt="My Image" class="logo" />
+            >
+            <img src="img/logo.png" alt="My Image" class="logo">
           </picture>
           <nav>
             <ul>
@@ -52,8 +52,8 @@
           <source
             srcset="img/profilepicture_placeholder.jpg"
             media="(max-width:767px)"
-          />
-          <img src="img/profilepicture_placeholder.jpg" alt="Profile Picture" class="img1center"/>
+          >
+          <img src="img/profilepicture_placeholder.jpg" alt="Profile Picture" class="img1center">
         </picture>
       </div>
       <div id="about">
