update expert.html with image fixes
If applied, this commit will add fixes to image sizes

--- a/expert.html
+++ b/expert.html
@@ -20,8 +20,8 @@
                 <source
                   srcset="img/logo.png"
                   media="(max-width:767px)"
-                />
-                <img src="img/logo.png" alt="My Image" class="logo" />
+                >
+                <img src="img/logo.png" alt="My Image" class="logo">
               </picture>
     <nav>
         <ul>
@@ -61,6 +61,7 @@
                         the features of the application.</p>
                     </div>
             </div>
+        </div>
         </div>
         <div id="project-process">
             <div class="container">
@@ -240,13 +241,13 @@
                         <div class="column">
                         <picture>
                             <source srcset="img/expert/mid_fidelity_2_2.png" media="(max-width:767px)">
-                            <img align="right" src="img/expert/mid_fidelity_2_2.png" alt="Ask Question Before"class="img1center">
+                            <img align="right" src="img/expert/mid_fidelity_2_2.png" alt="Ask Question Before" class="img1center">
                         </picture>
                         </div>
                         <div class="column">
                         <picture>
                             <source srcset="img/expert/usability_testing_4_2.png" media="(max-width:767px)">
-                            <img align="left" src="img/expert/usability_testing_4_2.png" alt="Ask Question After"class="img1center">
+                            <img align="left" src="img/expert/usability_testing_4_2.png" alt="Ask Question After" class="img1center">
                         </picture>
                         </div>
                     </div>
@@ -267,13 +268,13 @@
                     <img src="img/expert/design_system_2.png" alt="Design System" class="img3center">
                 </picture>
         </div>
-        <br/>
+        <br>
         <div>
             <picture>
                 <source srcset="img/expert/final_mockups_2.png" media="(max-width:767px)">
                 <img src="img/expert/final_mockups_2.png" alt="Final Mock Ups" class="img2center">
-            </picture><br/>
-            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1200" height="850" class="userresearch_2" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FLXLKxHwvRrK7OlvS77JiXU%2FExpert%3Fnode-id%3D315%253A1380%26scaling%3Dscale-down%26page-id%3D8%253A315%26starting-point-node-id%3D315%253A1380" allowfullscreen></iframe> <br>
+            </picture><br>
+            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" class="userresearch_2" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FLXLKxHwvRrK7OlvS77JiXU%2FExpert%3Fnode-id%3D315%253A1380%26scaling%3Dscale-down%26page-id%3D8%253A315%26starting-point-node-id%3D315%253A1380" allowfullscreen></iframe> <br>
             <p>Developing the Expert app was quite the journey for me. I wanted to make sure I had a full
                 connection with my potential users in every step of the way with researching, testing, and
                 surveys to ensure that the application was user centric based and I believed I achieved that
