update index.html to remove unnecessary trails
If applied, this commit will remove unnecessary trails

--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>Matt Seao UX Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;700&display=swap"
-      rel="stylesheet"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+      rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script
       src="https://kit.fontawesome.com/8220e551aa.js"
       crossorigin="anonymous"
@@ -25,9 +24,8 @@
             <picture>
                 <source
                   srcset="img/logo.png"
-                  media="(max-width:767px)"
-                />
-                <img src="img/logo.png" alt="My Image" class="logo" />
+                  media="(max-width:767px)">
+                <img src="img/logo.png" alt="My Image" class="logo">
               </picture>
           <nav>
             <ul>
@@ -65,9 +63,8 @@
               <picture>
                 <source
                   srcset="img/expert_app_preview.png"
-                  media="(max-width:767px)"
-                />
-                <img src="img/expert_app_preview.png" alt="Expert Preview" />
+                  media="(max-width:767px)">
+                <img src="img/expert_app_preview.png" alt="Expert Preview">
               </picture>
             </div>
             <div class="column col-md-6 col-lg-5">
@@ -84,9 +81,8 @@
               <picture>
                 <source
                   srcset="img/second_project_preview.png"
-                  media="(max-width:767px)"
-                />
-                <img src="img/second_project_preview.png" alt="My Image" />
+                  media="(max-width:767px)">
+                <img src="img/second_project_preview.png" alt="My Image">
               </picture>
             </div>
             <div class="column col-md-6 col-lg-5">
