update about.html resume button
If applied, this commit add a resume button

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
             have a huge admiration for design and upon learning what UX Design
             is, I knew it would be a perfect fit for me.
           </p>
-          <a href="files/resume.pdf" target="_blank">Download My Resume</a>
+          <a href="files/resume.pdf" target="_blank" class="button">Download My Resume</a>
           <div>
             <h2>Skills & Tools</h2>
             <div class="row">
