--- a/about.html
+++ b/about.html
@@ -16,17 +16,16 @@
     <header>
       <div class="container">
         <div class="navtoggle" id="myNavtoggle">
-          <picture>
+          <a href="index.html"><picture>
             <source
               srcset="img/logo.png"
-              media="(max-width:767px)"
-            >
+              media="(max-width:767px)">
             <img src="img/logo.png" alt="My Image" class="logo">
-          </picture>
+          </picture></a>
           <nav>
             <ul>
               <li><a href="index.html">Work</a></li>
-              <li><a href="about.html">About</a></li>
+              <li><a href="about.html">About Me</a></li>
               <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
               <li>
                 <a
