--- a/expert.html
+++ b/expert.html
@@ -16,17 +16,16 @@
     <header>
     <div class="container">
         <div class="navtoggle" id="myNavtoggle">
-            <picture>
+            <a href="index.html"><picture>
                 <source
                   srcset="img/logo.png"
-                  media="(max-width:767px)"
-                >
+                  media="(max-width:767px)">
                 <img src="img/logo.png" alt="My Image" class="logo">
-              </picture>
+              </picture></a>
     <nav>
         <ul>
         <li><a href="index.html">Work</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="about.html">About Me</a></li>
         <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
         <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fa-solid fa-bars"></i></a></li>
         </ul>
@@ -48,11 +47,11 @@
             <div class="container">
                 <h2>Introduction</h2>
                 <p>The Expert app is a social platform allowing people to find their answers through professionals
-                    of various fields.</p>
+                    of various fields by using a simple yet intuitive way to connect an expert of nearly any field to a user's preferred communication method.</p>
                     <div class="row">
                     <div class="col-md-6">
                     <h2>Problem Statement</h2>
-                    <p>In the current age of technology people have their own preferred way of communication. Expert
+                    <p>In the current age of technology people have their own preferred way of communication. Our
                         users need a way to easily communicate their questions in a centralized format.</p>
                     </div>
                     <div class="col-md-6">
