--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
           <nav>
             <ul>
               <li><a href="index.html">Work</a></li>
-              <li><a href="about.html">About Me</a></li>
+              <li><a href="about.html">About</a></li>
               <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
               <li>
                 <a
