revert expert.html title change
If applied, this commit revert title change to about line

--- a/expert.html
+++ b/expert.html
@@ -25,7 +25,7 @@
     <nav>
         <ul>
         <li><a href="index.html">Work</a></li>
-        <li><a href="about.html">About Me</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
         <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fa-solid fa-bars"></i></a></li>
         </ul>
@@ -46,8 +46,7 @@
         <div id="project-background">
             <div class="container">
                 <h2>Introduction</h2>
-                <p>The Expert app is a social platform allowing people to find their answers through professionals
-                    of various fields by using a simple yet intuitive way to connect an expert of nearly any field to a user's preferred communication method.</p>
+                <p>The Expert app is a social platform that allows people to connect to Experts of nearly any field by the means of their own preferred method of communication. </p>
                     <div class="row">
                     <div class="col-md-6">
                     <h2>Problem Statement</h2>
