--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <nav>
             <ul>
               <li><a href="index.html">Work</a></li>
-              <li><a href="about.html">About Matt</a></li>
+              <li><a href="about.html">About</a></li>
               <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
               <li>
                 <a
