update expert.html with removal of align code
If applied, this commit will remove dated align code

--- a/expert.html
+++ b/expert.html
@@ -221,13 +221,13 @@
                         <div class="column">
                     <picture>
                         <source srcset="img/expert/mid_fidelity_1_2.png" media="(max-width:767px)">
-                        <img align="right" src="img/expert/mid_fidelity_1_2.png" alt="Home Screen Before" class="img1center">
+                        <img src="img/expert/mid_fidelity_1_2.png" alt="Home Screen Before" class="img1right">
                     </picture>
                         </div>
                         <div class="column">
                     <picture>
                         <source srcset="img/expert/usability_testing_3_2.png" media="(max-width:767px)">
-                        <img align="left" src="img/expert/usability_testing_3_2.png" alt="Home Screen After" class="img1center">
+                        <img src="img/expert/usability_testing_3_2.png" alt="Home Screen After" class="img1left">
                     </picture>
                         </div>
                     </div>
@@ -239,13 +239,13 @@
                         <div class="column">
                         <picture>
                             <source srcset="img/expert/mid_fidelity_2_2.png" media="(max-width:767px)">
-                            <img align="right" src="img/expert/mid_fidelity_2_2.png" alt="Ask Question Before" class="img1center">
+                            <img src="img/expert/mid_fidelity_2_2.png" alt="Ask Question Before" class="img1right">
                         </picture>
                         </div>
                         <div class="column">
                         <picture>
                             <source srcset="img/expert/usability_testing_4_2.png" media="(max-width:767px)">
-                            <img align="left" src="img/expert/usability_testing_4_2.png" alt="Ask Question After" class="img1center">
+                            <img src="img/expert/usability_testing_4_2.png" alt="Ask Question After" class="img1left">
                         </picture>
                         </div>
                     </div>
