--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <ul>
               <li><a href="index.html">Work</a></li>
               <li><a href="about.html">About</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
               <li>
                 <a
                   href="javascript:void(0);"
