--- a/about.html
+++ b/about.html
@@ -63,7 +63,11 @@
           <p>
             My name is Matthew and I am a UX Designer based in Columbus, OH. I
             have a huge admiration for design and upon learning what UX Design
-            is, I knew it would be a perfect fit for me.
+            is, I knew it would be a perfect fit for me. </p>
+            <p>
+            I'm very new to the field of UX Design but I have always had a love for all things design. Previously I had worked in various customer service roles but that allowed me to build skills empathizing and creating solutions within the extent of the business interests.
+            With a love of design and the skills that I have developed it was only natural that I discovered UX Design.
+            I'm hoping to find opportunities that will push my problem solving skills to create user-centrics products and experiences. 
           </p>
           <a href="files/resume.pdf" target="_blank" class="button">Download My Resume</a>
           </div>
@@ -106,7 +110,7 @@
           </div>
       </div>
       <div>        
-          <a href="#" target="_blank">
+          <a href="https://www.linkedin.com/in/mattseao/" target="_blank">
               <svg width="40" height="40" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Pro 6.3.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"/></svg>
           </a>
       </div>
